welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:18: error: not found: type color
  def peindre(c:color){
                ^MethodsPicture:25: error: not found: value color
    faireV(color.red);
           ^MethodsPicture:26: error: not found: value color
    faireV(color.red);
           ^MethodsPicture:27: error: not found: value color
    faireV(color.blue);
           ^MethodsPicture:28: error: not found: value color
    faireV(color.green);
           ^